Fix contrast footer

--- a/style.css
+++ b/style.css
@@ -692,7 +692,7 @@ p {
 }
 
 .footer-text {
-    color: #000000 !important;
+    color: #FFFFFF !important;
 }
 
 .cta-hero {
